fixed toolbar and size spacing

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,7 +8,8 @@
 }
 .side-content {
   background-color: rgba(255, 255, 255, 0.479);
-  min-height: 100vh;
+  min-height: fit-content;
+  max-height:  100vh;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   padding-left: 15px;
 }
